# Lavamedia

./: .eslintrc.json  .gitignore  MANIFEST.in  README.md  alembic.ini  jest.config.js  next.config.js  package.json  playwright.config.ts  pyproject.toml  render.yaml  tailwind.config.ts  tsconfig.json
__tests__/: home.test.tsx
aiosqlite/: __init__.py
alembic/: env.py
alembic/versions/: 0001_create_tables.py  0002_architecture_alignment.py  0003_user_roles_and_stripe.py
app/: globals.css  layout.tsx  main.py  page.tsx  sitemap.ts
app/(auth)/login/: page.tsx
app/(auth)/signup/: page.tsx
app/a-propos/: page.tsx
app/admin/: layout.tsx  page.tsx
app/admin/newsletter/: page.tsx
app/admin/publicite/: page.tsx
app/admin/seo/: page.tsx
app/admin/utilisateurs/: page.tsx
app/api/routes/: __init__.py  analytics.py  auth.py  content.py  media.py  (+4 more)
app/charte/: page.tsx
app/contact/: page.tsx
app/core/: config.py  logging.py  security.py
app/db/: session.py  types.py
app/espace/: page.tsx
app/journalist/: layout.tsx  page.tsx
app/middleware/: __init__.py  metrics.py  observability.py  rate_limit.py  security_headers.py
app/models/: __init__.py  analytics.py  content.py  media.py  newsletter.py  notification.py  seo.py  user.py
app/newsletter/: page.tsx
app/recherche/: page.tsx  recherche-content.tsx
app/rubriques/: page.tsx
app/schemas/: analytics.py  auth.py  base.py  content.py  media.py  newsletter.py  notification.py  seo.py  user.py
app/services/: __init__.py  alerting.py  analytics.py  audit.py  auth.py  content.py  media.py  newsletter.py  notification.py  search.py  seo.py
app/support/: page.tsx
docs/: architecture-plan.md  performance-plan.md  rapport-synthese.md  wordpress-content-extraction.md
docs/deployment/: render.md
scripts/: fetch-wordpress-posts.js
src/contexts/: Providers.tsx  auth-context.tsx
src/lib/: auth-service.ts  mock-data.ts  seo.ts  structured-data.ts
src/types/: content.ts
tests/: conftest.py  test_alerting.py  test_analytics_newsletter.py  test_auth.py  test_config.py  test_content.py
tests/e2e/: smoke.spec.ts
(+26 files in other folders)
